<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.13</version>
		<relativePath />
	</parent>
	<groupId>com.csetutorials</groupId>
	<artifactId>fileserver</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>fileserver</name>
	<description>File Server</description>
	<properties>
		<java.version>8</java.version>
		<scrimage.version>4.0.37</scrimage.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-batik</artifactId>
			<version>3.9.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-transcoder</artifactId>
			<version>1.14</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.sksamuel.scrimage</groupId>
			<artifactId>scrimage-core</artifactId>
			<version>${scrimage.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sksamuel.scrimage</groupId>
			<artifactId>scrimage-filters</artifactId>
			<version>${scrimage.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sksamuel.scrimage</groupId>
			<artifactId>scrimage-webp</artifactId>
			<version>${scrimage.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sksamuel.scrimage</groupId>
			<artifactId>scrimage-formats-extra</artifactId>
			<version>${scrimage.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sksamuel.scrimage</groupId>
			<artifactId>scrimage-format-png</artifactId>
			<version>${scrimage.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sksamuel.scrimage</groupId>
			<artifactId>scrimage-metadata_2.11</artifactId>
			<version>2.0.0-M3</version>
		</dependency>
		<dependency>
			<groupId>com.sksamuel.scrimage</groupId>
			<artifactId>scrimage-io_2.11</artifactId>
			<version>2.1.0.M2</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
